--- a/app/src/main/res/layout/item_sleep_list.xml
+++ b/app/src/main/res/layout/item_sleep_list.xml
@@ -3,40 +3,43 @@
         xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable name="sleep" type="stan.devhouse.trackmysleep.db.entity.DailySleepQualityEntity"/>
+        <variable name="clickListener" type="stan.devhouse.trackmysleep.sleeptracker.SleepListListener"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> clickListener.onClick(sleep)}">
 
         <ImageView android:layout_width="@dimen/icon_size" android:layout_height="60dp"
                    android:id="@+id/quality_image"
-                   app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:qualityImage="@{sleep}"
-                   tools:src="@drawable/ic_sleep_5" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
-                   android:layout_marginStart="16dp" android:contentDescription="@string/quality_icon"/>
+                   tools:src="@drawable/ic_sleep_5"
+                   android:contentDescription="@string/quality_icon"
+                   app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/durationTextView"
                 app:sleepDurationFormatted="@{sleep}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                app:layout_constraintTop_toTopOf="@+id/quality_image"
-                app:layout_constraintStart_toEndOf="@+id/quality_image"
-                tools:text="Wednesday" android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/qualityTextView"/>
+                tools:text="Wednesday"
+                app:layout_constraintTop_toBottomOf="@+id/quality_image" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/qualityTextView"
+                android:textAlignment="center" android:layout_marginTop="4dp"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:sleepQualityFormatted="@{sleep}"
-                android:id="@+id/qualityTextView" app:layout_constraintTop_toBottomOf="@+id/durationTextView"
+                android:id="@+id/qualityTextView"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-                app:layout_constraintStart_toEndOf="@+id/quality_image" app:layout_constraintEnd_toEndOf="parent"
-                tools:text="Excellent" android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/quality_image"/>
+                tools:text="Excellent"
+                app:layout_constraintTop_toBottomOf="@+id/durationTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                android:textAlignment="center" android:layout_marginTop="2dp" android:layout_marginBottom="8dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
