--- a/app/src/main/res/layout/sleep_detail_fragment.xml
+++ b/app/src/main/res/layout/sleep_detail_fragment.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Data to make available to the XML via data binding. In this case,
          the whole ViewModel, so that we can access the LiveData,
          click handlers, and state variables. -->
     <data>
         <variable
                 name="sleepDetailViewModel"
-                type="stan.devhouse.trackmysleep.sleepdetail.SleepDetailViewModel" />
+                type="stan.devhouse.trackmysleep.sleepdetail.SleepDetailViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,53 +15,51 @@
             android:layout_height="match_parent"
             tools:context=".sleepdetail.SleepDetailFragment">
 
-        <!--<ImageView-->
-        <!--android:id="@+id/quality_image"-->
-        <!--android:layout_width="@dimen/icon_size"-->
-        <!--android:layout_height="@dimen/icon_size"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="56dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--app:sleepImage="@{sleepDetailViewModel.night}"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent" />-->
+        <ImageView
+                android:id="@+id/quality_image"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginTop="56dp"
+                app:qualityImage="@{sleepDetailViewModel.night}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-        <!--<TextView-->
-        <!--android:id="@+id/quality_string"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="100dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/quality_image"-->
-        <!--app:sleepQualityString="@{sleepDetailViewModel.night}" />-->
+        <TextView
+                android:id="@+id/quality_string"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="Excellent"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/quality_image"
+                app:sleepQualityFormatted="@{sleepDetailViewModel.night}"
+                app:layout_constraintBottom_toTopOf="@+id/sleep_length"/>
 
-        <!--<TextView-->
-        <!--android:id="@+id/sleep_length"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="32dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/quality_string"-->
-        <!--app:sleepDurationFormatted="@{sleepDetailViewModel.night}" />-->
+        <TextView
+                android:id="@+id/sleep_length"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="5 hours on Wednesday"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                app:layout_constraintTop_toBottomOf="@+id/quality_string"
+                app:sleepDurationFormatted="@{sleepDetailViewModel.night}" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"/>
 
-        <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginBottom="32dp"-->
-        <!--android:onClick="@{() -> sleepDetailViewModel.onClose()}"-->
-        <!--android:text="@string/close"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent" />-->
+        <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="32dp"
+                android:onClick="@{() -> sleepDetailViewModel.onClose()}"
+                android:text="@string/close"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
