--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -15,6 +15,8 @@
                 app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/slide_in_right"
                 app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+        <action android:id="@+id/action_sleepTrackerFragment_to_sleepDetailFragment"
+                app:destination="@id/sleepDetailFragment"/>
     </fragment>
     <fragment android:id="@+id/sleepQualityFragment"
               android:name="stan.devhouse.trackmysleep.sleepquality.SleepQualityFragment"
